# prediction-market-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: learning_p.md  lint_wiki.md  research.md
db/scripts/: kalshi_fetch.py  pull_kalshi_mlb.py
db/tests/: connection_test.py
docs/: poka_arb_data_sources.md  project-conventions.md
plans/: data_pull_improvements.md  first_db_pull_plan.md
raw/md/: kalshi-api-authentication.md  kalshi-api-changelog-2026.md  kalshi-api-historical-data.md  kalshi-api-market-data-endpoints.md  kalshi-api-orders-and-portfolio.md  (+35 more)
tests/: test_data_quality.py
wiki/: analytical-database-design.md  anscombes-quartet.md  chart-selection.md  claude-as-teacher.md  claude-code-learning-style.md  claude-learning-mode.md  claude-skills-frontmatter.md  claude-skills-testing.md  claude-skills-writing-guide.md  claude-skills.md  data-pipeline-stack.md  data-storytelling.md  data-visualization-principles.md  database-maintenance.md  database-naming-conventions.md  dimensional-modeling.md  duckdb-data-ingestion.md  duckdb-db-api.md  duckdb-expression-api.md  duckdb-friendly-sql.md  duckdb-python-connections.md  duckdb-relational-api.md  duckdb-result-conversion.md  duckdb-udfs.md  duckdb.md  eda-assumptions.md  eda-four-rs.md  eda-techniques.md  eda-workflow.md  exploratory-data-analysis.md  httpx.md  index.md  kalshi-api-auth.md  kalshi-api-environments.md  kalshi-api-historical.md  kalshi-api-market-data.md  kalshi-api-orders.md  kalshi-api-pagination.md  kalshi-api-rate-limits.md  kalshi-api-sdks.md  (+41 more)
write_ups/: data_pull.md
(+1 files in other folders)
